# Pl0Studio

./: .gitignore  CMakeLists.txt  IgorsStudioPro.desktop  README.md
src_compiler/: calc.asm  errors.txt  lexeme_table.txt  output  pl0.c  pl0_runtime.h  pl0c  strtonum.c  strtonum.h  test.O13  test.pl0  test1.O13  test2.O13  test3.O13  token_table.txt
src_gui/: CodeEditor.cpp  CodeEditor.h  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  main.cpp
